# grumpydb

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.publish-ci  Dockerfile.repl  Dockerfile.server  README.md  docker-compose.cluster.yml  docker-compose.yml  toto
.cargo/: audit.toml
.claude/agents/: auth-agent.md  btree-agent.md  docs-agent.md  driver-agent.md  integration-agent.md  page-agent.md  protocol-agent.md  release-agent.md  tcp-server-agent.md  wal-agent.md
.claude/skills/: auth-rbac.md  btree-index.md  buffer-pool.md  document-model.md  driver.md  page-storage.md  protocol.md  tcp-tls.md  testing-strategy.md  wal-recovery.md
.github/workflows/: ci.yml  fuzz.yml
benches/: engine.rs  protocol.rs
docker/: prometheus.yml
docker/cluster/: node1.toml  node5.toml  test-instructions.txt
docker/cluster/data/node1/_cluster/: node.json
docker/cluster/data/node2/_cluster/: node.json
docker/cluster/data/node3/_cluster/: node.json
docs/: ARCHITECTURE.md  AUTH.md  CLUSTER.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_PLAN_V3.md  IMPLEMENTATION_PLAN_V4.md  IMPLEMENTATION_PLAN_V5.md  MIGRATING_4_to_5.md  MVCC.md  REPLICATION.md  RING.md  SCHEMA_GOSSIP.md  TOMBSTONES.md  WAL.md
drivers/typescript/: README.md  package-lock.json  package.json
drivers/typescript/examples/: cluster.ts  siblings.ts
drivers/typescript/src/: auth.ts  client.ts  connection.ts  database.ts  errors.ts  index.ts  jwks.test.ts  jwks.ts  protocol.ts  types.ts
examples/grumpysh/: filter.rs  json_parser.rs  main.rs  parser.rs  repl.rs  tcp_backend.rs
examples/taskman/: COOKBOOK.md  PERFORMANCE.md  README.md  TUTORIAL.md  concurrent.rs  main.rs  store.rs  task.rs  test_crash.sh  test_crash_fixed.sh
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parse_command.rs  response_serialize.rs  value_codec_roundtrip.rs  wal_record_decode.rs
grumpy-repl/: Cargo.toml  README.md
grumpy-repl/src/: filter.rs  json_parser.rs  main.rs  parser.rs  repl.rs  tcp_backend.rs
grumpydb-client/: Cargo.toml
grumpydb-client/src/: connection.rs  error.rs  jwks.rs  lib.rs
grumpydb-protocol/: Cargo.toml
grumpydb-protocol/src/: command.rs  lib.rs  parser.rs  response.rs
grumpydb-replication/: Cargo.toml
grumpydb-replication/src/: frame.rs  idempotent.rs  lag_tracker.rs  lib.rs  session.rs  tailer.rs  tasks.rs  writer_control.rs
grumpydb-ring/: Cargo.toml
grumpydb-ring/benches/: ring.rs
grumpydb-ring/examples/: distribution.rs
grumpydb-ring/src/: hash.rs  lib.rs  ring.rs
grumpydb-server/: Cargo.toml
grumpydb-server/src/: config.rs  coordinator.rs  http.rs  lib.rs  limits.rs  main.rs  snapshot.rs
grumpydb-server/src/auth/: jwt.rs  mod.rs  role.rs  store.rs  user.rs
grumpydb-server/src/cluster/: gossip.rs  handshake.rs  hints.rs  mod.rs  read_repair.rs
grumpydb-server/src/cluster/schema/: bootstrap.rs  log.rs  materializer.rs  mod.rs  tests.rs
grumpydb-server/src/session/: mod.rs
grumpydb-server/src/tcp/: handler.rs  listener.rs  mod.rs
grumpydb-server/tests/: schema_gossip.rs  snapshot_aws.rs  snapshot_azure.rs  snapshot_e2e.rs
grumpydb-testing/: Cargo.toml
grumpydb-testing/src/: lib.rs  server.rs
scripts/: convergence_cluster.sh  demo_cluster.sh  smoke_cluster.sh
src/: engine.rs  error.rs  lib.rs  naming.rs
src/btree/: cursor.rs  key.rs  mod.rs  node.rs  ops.rs  var_cursor.rs  var_node.rs  var_ops.rs  var_tree.rs
src/buffer/: frame.rs  mod.rs  pool.rs
src/collection/: mod.rs
src/concurrency/: lock_manager.rs  mod.rs  shared.rs
src/database/: mod.rs
src/document/: codec.rs  crdt.rs  mod.rs  value.rs
src/index/: encoding.rs  mod.rs
src/page/: manager.rs  mod.rs  overflow.rs  slotted.rs
src/server/: client.rs  mod.rs
src/wal/: applied_set.rs  hlc.rs  mod.rs  record.rs  recovery.rs  vclock.rs  writer.rs
tests/: crash_recovery.rs  crud_test.rs  server_auth.rs  server_concurrency.rs  server_e2e.rs  server_http.rs  server_jwks.rs  stress_test.rs
