[package]
name = "grumpy-repl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Interactive REPL shell for GrumpyDB (embedded + TCP modes)"
readme = "README.md"
keywords = ["database", "repl", "shell", "grumpydb", "cli"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "grumpy-repl"
path = "src/main.rs"

[dependencies]
grumpydb = { path = "..", version = "5" }
grumpydb-client = { path = "../grumpydb-client", version = "5" }
grumpydb-protocol = { path = "../grumpydb-protocol", version = "5" }
uuid = { version = "1", features = ["v4", "serde"] }
rustyline = "15"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
