[package]
name = "grumpydb-client"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust client driver for GrumpyDB — TCP/TLS, JWT auth, async CRUD"
keywords = ["database", "client", "driver", "grumpydb", "async"]
categories = ["database", "network-programming"]

[dependencies]
grumpydb-protocol = { path = "../grumpydb-protocol", version = "1" }
tokio = { version = "1", features = ["net", "io-util", "rt", "macros"] }
tokio-rustls = "0.26"
rustls = "0.23"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
