[package]
name = "grumpydb-protocol"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Wire protocol (RESP-like) for GrumpyDB — shared between server and client drivers"
keywords = ["database", "protocol", "resp", "grumpydb"]
categories = ["database", "network-programming"]

[dependencies]
thiserror = "2"
