[package]
name = "grumpydb-replication"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WAL-stream replication for GrumpyDB (Phase 40e). Internal."

[dependencies]
thiserror = "2"
crc32fast = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grumpydb = { path = ".." }

[dev-dependencies]
proptest = "1"
tempfile = "3"
