[package]
name = "grumpydb-server"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "GrumpyDB networked server — TCP/TLS, JWT auth, RBAC"
license = "MIT"

[dependencies]
grumpydb = { path = ".." }
grumpydb-protocol = { path = "../grumpydb-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
