[package]
name = "grumpydb-server"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GrumpyDB networked server — TCP/TLS, JWT auth, RBAC"
keywords = ["database", "server", "grumpydb", "tcp", "tls"]
categories = ["database", "network-programming"]

[dependencies]
grumpydb = { path = "..", version = "4" }
grumpydb-protocol = { path = "../grumpydb-protocol", version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
